[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "23-day1"
path = "src/23/day1/main.rs"

[[bin]]
name = "23-day2"
path = "src/23/day2/main.rs"

[[bin]]
name = "23-day3"
path = "src/23/day3/main.rs"

[[bin]]
name = "23-day4"
path = "src/23/day4/main.rs"

[[bin]]
name = "23-day5"
path = "src/23/day5/main.rs"

[[bin]]
name = "23-day6"
path = "src/23/day6/main.rs"

[[bin]]
name = "23-day7"
path = "src/23/day7/main.rs"

[[bin]]
name = "23-day8"
path = "src/23/day8/main.rs"

[[bin]]
name = "23-day9"
path = "src/23/day9/main.rs"

[[bin]]
name = "23-day10"
path = "src/23/day10/main.rs"

[[bin]]
name = "23-day11"
path = "src/23/day11/main.rs"

[[bin]]
name = "23-day12"
path = "src/23/day12/main.rs"

[[bin]]
name = "23-day13"
path = "src/23/day13/main.rs"

[[bin]]
name = "23-day14"
path = "src/23/day14/main.rs"

[[bin]]
name = "23-day15"
path = "src/23/day15/main.rs"

[dependencies]
itertools = "0.12.0"
num = "0.4.1"
test-case = "3.3.1"
